[project]
name = "arxiv-agent-api"
version = "0.1.0"
description = "FastAPI service for searching arXiv and ranking relevant papers."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "langgraph>=0.6.0,<1.0.0",
  "langchain-openai>=0.3.0,<1.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "pypdf>=5.4.0,<6.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
